examples/test/testpolicy11157.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11157
  namespace: namespace446
spec:
  podSelector:
    matchLabels:
      key48: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value15
          key3: value23
          key31: value9
      podSelector:
        matchLabels:
          key23: value9
          key7: value37
